# pyredfisher

./: .gitignore  .python-version  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  build.sh  pyproject.toml  pyredfisher.py  requirements-dev.txt  requirements.txt
.github/: CONTRIBUTING_GITHUB.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: COMPLETION_SUMMARY.md  ETAG_SUPPORT.md  EXAMPLES.md  INDEX.md  OEM_LINKS_SURFACING.md  SINGULAR_COLLECTION_ACCESS.md  SSL_CONFIGURATION.md  TESTS.md  USE_CASES.md
examples/: demo_surfacing_comprehensive.py  example_oem_links.py  examples_comprehensive.py
rackfish/: __init__.py  client.py
tests/: test_common_usage.py  test_etag_support.py  test_oem_links_surfacing.py  test_recursion_fix.py  test_singular_collection_access.py
